# lerobot_ws

./: .gitignore  README.md  feetech_read_test
src/lerobot_bringup/: CMakeLists.txt  package.xml
src/lerobot_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
src/lerobot_controller/: CMakeLists.txt  lerobot_controller.xml  package.xml
src/lerobot_controller/config/: lerobot_controllers.yaml  lerobot_controllers_gui.yaml  lerobot_controllers_sim.yaml
src/lerobot_controller/include/lerobot_controller/: feetech_bus.hpp  lerobot_interface.hpp
src/lerobot_controller/launch/: controller.launch.py  controller_sim.launch.py
src/lerobot_controller/scripts/: feetech_read_test.cpp
src/lerobot_controller/src/: gui_to_controller_bridge.cpp  lerobot_interface.cpp
src/lerobot_cpp_examples/: CMakeLists.txt  package.xml
src/lerobot_cpp_examples/launch/: simple_moveit_interface.launch.py
src/lerobot_cpp_examples/scripts/: calibrar.py  calibrar_servos.py  dh_parameters.txt  final.py  lero_control.py  lero_fk  lero_fk.cpp  lero_fk.py  lero_ik  lero_ik.cpp  lero_ik.py  limites.txt  servo_angle_converted.py  servo_extended_feedback.py  servo_fk.py  servo_home  servo_home.cpp  servo_home.py  servo_leer.py  servo_leer_escribir.py  single_servo.py
src/lerobot_cpp_examples/src/: simple_moveit_interface.cpp
src/lerobot_description/: CMakeLists.txt  package.xml
src/lerobot_description/copia/: gaze.py
src/lerobot_description/launch/: display.launch.py  gazebo.launch.py  rviz.launch.py
src/lerobot_description/meshes/: base_link.stl  limb1_1.stl  limb2_1.stl  limb3_1.stl  limb4_1.stl  limb5_1.stl  limb6_1.stl
src/lerobot_description/urdf/: lerobot.urdf.xacro  lerobot_gazebo.xacro  lerobot_ros2_control.xacro  materials.xacro
src/lerobot_firmware/: CMakeLists.txt  package.xml
src/lerobot_moveit/: CMakeLists.txt  package.xml
src/lerobot_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  lerobot.srdf  moveit_controllers.yaml
src/lerobot_moveit/launch/: moveit.launch.py
src/lerobot_msgs/: CMakeLists.txt  package.xml
src/lerobot_remoto/: CMakeLists.txt  package.xml
src/lerobot_remoto/launch/: remote_interface.launch.py
src/lerobot_remoto/lerobot_remoto/: alexa_interface.py
src/lerobot_remoto/src/: task_server.cpp
src/lerobot_utils/: CMakeLists.txt  package.xml
src/lerobot_utils/src/: angle_conversion.cpp
